--- a/front/products.html
+++ b/front/products.html
@@ -10,12 +10,33 @@
 </head>
 <body>
   <div class="container mt-4">
-    <h1>Productos de Delilah Resto 4.0</h1>
+
+    <!-- Navbar-->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="index.html">Delilah Resto 4.0</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav">
+            <a class="nav-link" aria-current="page" href="orders.html">Orders</a>
+            <a class="nav-link" href="payments.html">Payments</a>
+            <a class="nav-link disabled" href="products.html">Products</a>
+          </div>
+        </div>
+      </div>
+    </nav>
+
+    <br>
+    <br>
+
+    <h1 class="text-center">See all the products from Delilah Resto 4.0</h1>
     <hr>
     <div class="row">
       <div class="col-md-4">
         <div class="box">
-          <h3>Ver Productos disponibles</h3>
+          <h3>See the list of products available:</h3>
           <form method="post" id="login_form">
             <div class="form-group mb-3">
               <label>Ingrese por favor su Token User:</label>
