--- a/front/payments.html
+++ b/front/payments.html
@@ -10,6 +10,29 @@
 </head>
 <body>
   <div class="container mt-4">
+
+
+    <!-- Navbar-->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="index.html">Delilah Resto 4.0</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav">
+            <a class="nav-link" aria-current="page" href="orders.html">Orders</a>
+            <a class="nav-link disabled" href="payments.html">Payments</a>
+            <a class="nav-link" href="products.html">Products</a>
+          </div>
+        </div>
+      </div>
+    </nav>
+
+    <br>
+    <br>
+
+
     <h1 class="text-center">Check your Order State in Delilah Resto 4.0</h1>
     <hr>
     <div class="row">
